k8s/namespace.yaml
# © 2025 Dowek Analytics Ltd.
# Oracle Samuel - Kubernetes Namespace

apiVersion: v1
kind: Namespace
metadata:
  name: oracle-samuel
  labels:
    app: oracle-samuel
    environment: production
